--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "demo.ios": "npm run preparedemo; cd demo; tns emulate ios",
     "demo.android": "npm run preparedemo; cd demo; tns run android",
     "preparedemo": "npm run build; cd demo; tns plugin remove nativescript-spotify; tns plugin add ..; tns install",
+    "push": "git add .; git commit -m 'Publishing.'; git push",
     "setup": "npm i; cd demo; npm install; cd ..; npm run build; cd demo; tns plugin add ..; cd .."
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/NathanWalker/nativescript-spotify.git"
+    "url": "https://github.com/mavieth/nativescript-spotify.git"
   },
   "keywords": [
     "NativeScript",
@@ -36,24 +37,10 @@
     "email": "walkerrunpdx@gmail.com"
   },
   "bugs": {
-    "url": "https://github.com/NathanWalker/nativescript-spotify/issues"
-  },
-  "license": {
-    "type": "MIT",
-    "url": "https://github.com/NathanWalker/nativescript-spotify/blob/master/LICENSE"
+    "url": "https://github.com/mavieth/nativescript-spotify/issues"
   },
   "contributors": [
-    {
-      "name": "Nathanael Anderson",
-      "email": "nathan@master-technology.com",
-      "url": "https://github.com/NathanaelA"
-    },
-    {
-      "name": "Brad Martin",
-      "email": "bradwaynemartin@gmail.com",
-      "url": "https://github.com/bradmartin"
-    }
   ],
-  "homepage": "https://github.com/NathanWalker/nativescript-spotify",
+  "homepage": "https://github.com/mavieth/nativescript-spotify",
   "readmeFilename": "README.md"
 }
